Finished tooltip just need to figure out how to get it to stop flickering

--- a/Visualizations/index.css
+++ b/Visualizations/index.css
@@ -43,13 +43,5 @@
 }
 
 .tooltipText {
-    font-family: "Times New Roman";
-    font-size: 18px;
-    text-anchor: middle;
-}
-
-.tooltipSubtext {
-    font-family: "Times New Roman";
-    font-size: 16px;
     text-anchor: middle;
 }
